# Mac-Environment-Installer

./: .gitignore  README.md  cask.sh  dev-install.sh  dev-m2-install.sh  install.py  package.json  pyproject.toml
bash-script/: dev-install.sh
scripts/: general.py  mobile.py  web.py
utils/: Color.py  Header.py  Utilities.py
