[tool.poetry]
name = "mac-environment-installer"
version = "1.0.0"
description = "Script to automatize the installation of a Dev Environment"
authors = ["Joanner Pena <joanner.c1006@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
